新增矩形的使用

--- a/MoneyMachine/MoneyMachine/MoneyMachine.csproj
+++ b/MoneyMachine/MoneyMachine/MoneyMachine.csproj
@@ -54,6 +54,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="moneyui\KNode.xaml.cs">
+      <DependentUpon>KNode.xaml</DependentUpon>
+    </Compile>
+    <Page Include="moneyui\KNode.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
